set up eventbus and scss set up

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,8 +2,7 @@
 
 body {
   margin: 0;
-  background-color: variables.$bg;
-  color: var(--text);
+  background-color: variables.$lighter-green;
   font-size: 26px;
 }
 
