Routing, views and component working

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -29,6 +29,7 @@ nav {
         list-style: none;
         li {
           margin: 0 1.2rem;
+          cursor: pointer;
           a {
             color: $white;
             text-decoration: none;
