Fix active class onload

--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,12 +1,14 @@
 <nav id="navbar">
   <div class="container">
-    <div class="logo navItem"><a href="" route="/">Logo</a></div>
+    <div class="logo navItem"><a route="/" class="logo">Logo</a></div>
     <div class="navMenu">
       <ul>
         <li class="navItem">
-          <a route="/" class="active">Home</a>
+          <a route="/" class="nav-link active">Home</a>
         </li>
-        <li class="navItem"><a route="/dashboard">Dashboard</a></li>
+        <li class="navItem">
+          <a route="/dashboard" class="nav-link">Dashboard</a>
+        </li>
       </ul>
     </div>
   </div>
