--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -6,6 +6,7 @@ nav {
   box-shadow: -5px 10px 5px $greyShadow;
   min-height: 4rem;
   font-size: 1.2rem;
+  font-weight: 700;
   background-color: $light-green;
   border-bottom: 1px solid darken($light-green, 5%);
   .container {
