add state management

--- a/src/components/UI/form-field/form-field.scss
+++ b/src/components/UI/form-field/form-field.scss
@@ -76,4 +76,13 @@
   &.black-input {
     @include mixin.colorInput(variables.$black);
   }
+  &.short {
+    width: 30%;
+  }
+  &.medium {
+    width: 50%;
+  }
+  &.large {
+    width: 100%;
+  }
 }
